# cdda_cat

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: main_ci.yml
cdda_cat/: Cargo.toml
cdda_cat-data/: Cargo.toml
cdda_cat-data/src/: entities.rs
cdda_cat-lib/: Cargo.toml
cdda_cat-lib/src/: github_client.rs  installation_manager.rs  lib.rs
cdda_cat/src/: lib.rs  main.rs
cdda_cat/src/infra/: mod.rs
cdda_cat/src/infra/archive/: mod.rs  tar_gz.rs  unpacker.rs
cdda_cat/src/infra/net/: download.rs
cdda_cat/src/infra/ui/cli/: download_archive.rs  mod.rs  progress_bar.rs
