[package]
name = "cdda_cat-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bpaf = "0.9.14"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
