[package]
name = "cdda_cat-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cdda_cat-data = { path = "../cdda_cat-data", version = "^0.1.0" }
derive_more = "0.99.17"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
async-trait = "0.1.68"
reqwest = { version = "0.12.8", features = ["json"] }
