[package]
name = "cdda_cat"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "cdda_cat"
path = "src/main.rs"

[lib]
name = "cdda_cat"
path = "src/lib.rs"

[dependencies]
cdda_cat-data = { path = "../cdda_cat-data", version = "^0.1.0" }
cdda_cat-lib = { path = "../cdda_cat-lib", version = "^0.1.0" }
anyhow = "1.0.71"
chrono = "0.4.26"
flate2 = "1.0.26"
futures = "0.3.28"
futures-util = "0.3.28"
indicatif = "0.17.5"
nix = "0.26.2"
reqwest = { version = "0.11.18", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tar = "0.4.38"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
derive_more = "0.99.17"
app_dirs2 = "2.5.5"
bpaf = "0.9.14"
